added more CSS styling

--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
         <p>I was born and raised in Oregon. I moved to Colorado when I was 19 years old.
             I originally started in Colorado Springs and resided there for 6 years before moving 
         to the rockie mountains where I am now, between Vail and Keystone. </p>
+        <h2>Hobbies</h2>
+        <p>After making the big move to CO, I got really into snow sports. I picked up snowboarding
+            and have made it to roughly 100 days per winter season on the mountain. I got comfortable 
+            with snowboarding and decided to pick up <a href="https://www.hovlandsnowskates.com/?gclid=Cj0KCQiA4b2MBhD2ARIsAIrcB-QZ21vdHtNDBjKyQg0WIhyYdfMTKUMjOW4jOYPSEfVFGWhEI8EX-o0aAiloEALw_wcB">
+                snowskating</a>. A new and challenging snow sport that I can't wait to master!
+        </p>
+        <h2>Home Life</h2>
+        <p>When I'm not on the mountain shredding, I spend a lot of time in the house. I have a 3 year old
+            Shiba Inu that has been the best dog I've ever had along with her kitten. The kitten may be the most 
+            evil cat ever but they happen to love each other. I enjoying cooking quite a bit and am constantly trying
+            new recipes! 
+        </p>
     </body>
 </html>
